# semantic-model-generator

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  Virtual_Env_setup  app.py  docker-compose.yaml  environment.yml  mypy.ini  pyproject.toml  rename_this_file_to_dot_env  semantic_model_generator.ipynb  snowflake.yml
.github/: CODEOWNERS
.github/workflows/: lint.yaml  release.yaml  test.yaml
admin_app/: README.md  app_utils.py  streamlit_app.py
admin_app/.streamlit/: config.toml
admin_app/pages/: about.py  chat.py  create.py  store.py  upload.py  validate.py
admin_apps/: README.md  app.py  builder_app.py  chat_app.py  curate_semantic.py  environment.yaml  environment.yml  iteration_app.py  partner_semantic.py  pyproject.toml  requirements.txt  shared_utils.py  vqr_app.py  vqr_app_mock.py  yaml_app.py
admin_apps/artifacts/: SMG_DEMO.csv
admin_apps/builder_app_utils/: navigation.py
admin_apps/builder_app_utils/pages/: create.py  edit.py  getting_started.py  store.py  upload.py  validate.py
admin_apps/journeys/: builder.py  comparator.py  iteration.py  joins.py  partner.py
admin_apps/partner/: cortex.py  dbt.py  looker.py  partner_utils.py
admin_apps/yaml_app_utils/: navigation.py
admin_apps/yaml_app_utils/pages/: chat.py  create.py  getting_started.py  store.py  upload.py  validate.py
app_utils/: chat.py  shared_utils.py
artifacts/: customers.yml
journeys/: builder.py  evaluation.py  iteration.py  joins.py  partner.py
partner/: cortex.py  dbt.py  looker.py  partner_utils.py
semantic_model_generator/: generate_model.py  main.py  validate_model.py
semantic_model_generator/admin_app/: streamlit_app.py
semantic_model_generator/data_processing/: cte_utils.py  cte_utils_test.py  data_types.py  proto_utils.py  sql_parsing.py
semantic_model_generator/protos/: semantic_model.proto  semantic_model_pb2.py  semantic_model_pb2.pyi
semantic_model_generator/snowflake_utils/: env_vars.py  snowflake_connector.py  utils.py
semantic_model_generator/sqlgen/: generate_sql.py
semantic_model_generator/tests/: cte_utils_test.py  generate_model_test.py  generate_semantic_model_test.py  generate_sql_test.py  main_test.py  proto_utils_test.py  snowflake_connector_test.py  utils_test.py  validate_model_test.py  yaml_to_semantic_model_test.py
semantic_model_generator/validate/: context_length.py  fields.py  keywords.py  schema.py
sis_setup/: app_setup.sql  app_setup_eval_branch.sql  generation_sproc.sql  looker_integration.sql  sissetup_snowsightgit.sql  sissetup_snowsightgit_eval_branch.sql
streamlit_env/: pyvenv.cfg
streamlit_env/Scripts/: activate  activate.bat
(+7 files in other folders)
